Class를 만드는 곳에 있어 파생되는 다른 테이블들을 정리해 보았습니다

--- a/app/views/class/class_bidding.html.erb
+++ b/app/views/class/class_bidding.html.erb
@@ -269,7 +269,7 @@
 																						<div class="d-flex">
 		
 																							<div class="symbol symbol-35px symbol-circle">
-																								<img src="assets/media/ysmeta/img_parent.jpeg" alt="Sean Bean" class="w-100">
+																								<img src="/images/ysmeta/img_parent.jpeg" alt="Sean Bean" class="w-100">
 																							</div>
 																						
 																							<div class="ms-3">
@@ -636,9 +636,9 @@
 																		<label class="d-block fw-bold fs-6 mb-5">Image</label>
 																		<!--end::Label-->
 																		<!--begin::Image input-->
-																		<div class="image-input image-input-outline" data-kt-image-input="true" style="background-image: url(assets/media/avatars/blank.png)">
+																		<div class="image-input image-input-outline" data-kt-image-input="true" style="background-image: url(/images/avatars/blank.png)">
 																			<!--begin::Preview existing avatar-->
-																			<div class="image-input-wrapper w-125px h-125px" style="background-image: url(assets/media/avatars/150-1.jpg);"></div>
+																			<div class="image-input-wrapper w-125px h-125px" style="background-image: url(/images/avatars/150-1.jpg);"></div>
 																			<!--end::Preview existing avatar-->
 																			<!--begin::Label-->
 																			<label class="btn btn-icon btn-circle btn-active-color-primary w-25px h-25px bg-body shadow" data-kt-image-input-action="change" data-bs-toggle="tooltip" title="" data-bs-original-title="Change avatar">
@@ -1431,7 +1431,7 @@
 																			<div class="d-flex">
 
 																				<div class="symbol symbol-35px symbol-circle">
-																					<img src="assets/media/ysmeta/img_parent.jpeg" alt="Sean Bean" class="w-100">
+																					<img src="/images/ysmeta/img_parent.jpeg" alt="Sean Bean" class="w-100">
 																				</div>
 																			
 																				<div class="ms-3">
@@ -1575,7 +1575,7 @@
 																				<div class="d-flex">
 
 																					<div class="symbol symbol-35px symbol-circle">
-																						<img src="assets/media/ysmeta/img_parent.jpeg" alt="Sean Bean" class="w-100">
+																						<img src="/images/ysmeta/img_parent.jpeg" alt="Sean Bean" class="w-100">
 																					</div>
 																				
 																					<div class="ms-3">
@@ -1627,7 +1627,7 @@
 																				<div class="d-flex">
 
 																					<div class="symbol symbol-35px symbol-circle">
-																						<img src="assets/media/ysmeta/img_parent.jpeg" alt="Sean Bean" class="w-100">
+																						<img src="/images/ysmeta/img_parent.jpeg" alt="Sean Bean" class="w-100">
 																					</div>
 																				
 																					<div class="ms-3">
@@ -1679,7 +1679,7 @@
 																				<div class="d-flex">
 
 																					<div class="symbol symbol-35px symbol-circle">
-																						<img src="assets/media/ysmeta/img_parent.jpeg" alt="Sean Bean" class="w-100">
+																						<img src="/images/ysmeta/img_parent.jpeg" alt="Sean Bean" class="w-100">
 																					</div>
 																				
 																					<div class="ms-3">
@@ -1731,7 +1731,7 @@
 																				<div class="d-flex">
 
 																					<div class="symbol symbol-35px symbol-circle">
-																						<img src="assets/media/ysmeta/img_parent.jpeg" alt="Sean Bean" class="w-100">
+																						<img src="/images/ysmeta/img_parent.jpeg" alt="Sean Bean" class="w-100">
 																					</div>
 																				
 																					<div class="ms-3">
@@ -1783,7 +1783,7 @@
 																				<div class="d-flex">
 
 																					<div class="symbol symbol-35px symbol-circle">
-																						<img src="assets/media/ysmeta/img_parent.jpeg" alt="Sean Bean" class="w-100">
+																						<img src="/images/ysmeta/img_parent.jpeg" alt="Sean Bean" class="w-100">
 																					</div>
 																				
 																					<div class="ms-3">
@@ -1836,7 +1836,7 @@
 																				<div class="d-flex">
 
 																					<div class="symbol symbol-35px symbol-circle">
-																						<img src="assets/media/ysmeta/img_parent.jpeg" alt="Sean Bean" class="w-100">
+																						<img src="/images/ysmeta/img_parent.jpeg" alt="Sean Bean" class="w-100">
 																					</div>
 																				
 																					<div class="ms-3">
@@ -2430,9 +2430,9 @@
 																		<label class="d-block fw-bold fs-6 mb-5">Avatar</label>
 																		<!--end::Label-->
 																		<!--begin::Image input-->
-																		<div class="image-input image-input-outline" data-kt-image-input="true" style="background-image: url(assets/media/avatars/blank.png)">
+																		<div class="image-input image-input-outline" data-kt-image-input="true" style="background-image: url(/images/avatars/blank.png)">
 																			<!--begin::Preview existing avatar-->
-																			<div class="image-input-wrapper w-125px h-125px" style="background-image: url(assets/media/avatars/150-1.jpg);"></div>
+																			<div class="image-input-wrapper w-125px h-125px" style="background-image: url(/images/avatars/150-1.jpg);"></div>
 																			<!--end::Preview existing avatar-->
 																			<!--begin::Label-->
 																			<label class="btn btn-icon btn-circle btn-active-color-primary w-25px h-25px bg-body shadow" data-kt-image-input-action="change" data-bs-toggle="tooltip" title="" data-bs-original-title="Change avatar">
@@ -2804,7 +2804,7 @@
 																						<div class="d-flex">
 		
 																							<div class="symbol symbol-35px symbol-circle">
-																								<img src="assets/media/ysmeta/img_student.jpeg" alt="Sean Bean" class="w-100">
+																								<img src="/images/ysmeta/img_student.jpeg" alt="Sean Bean" class="w-100">
 																							</div>
 																						
 																							<div class="ms-3">
@@ -2859,7 +2859,7 @@
 																						<div class="d-flex">
 		
 																							<div class="symbol symbol-35px symbol-circle">
-																								<img src="assets/media/ysmeta/img_student.jpeg" alt="Sean Bean" class="w-100">
+																								<img src="/images/ysmeta/img_student.jpeg" alt="Sean Bean" class="w-100">
 																							</div>
 																						
 																							<div class="ms-3">
@@ -2914,7 +2914,7 @@
 																						<div class="d-flex">
 		
 																							<div class="symbol symbol-35px symbol-circle">
-																								<img src="assets/media/ysmeta/img_student.jpeg" alt="Sean Bean" class="w-100">
+																								<img src="/images/ysmeta/img_student.jpeg" alt="Sean Bean" class="w-100">
 																							</div>
 																						
 																							<div class="ms-3">
@@ -2971,7 +2971,7 @@
 																						<div class="d-flex">
 
 																							<div class="symbol symbol-35px symbol-circle">
-																								<img src="assets/media/ysmeta/img_student.jpeg" alt="Sean Bean" class="w-100">
+																								<img src="/images/ysmeta/img_student.jpeg" alt="Sean Bean" class="w-100">
 																							</div>
 																						
 																							<div class="ms-3">
@@ -3286,9 +3286,9 @@
 																		<label class="d-block fw-bold fs-6 mb-5">Avatar</label>
 																		<!--end::Label-->
 																		<!--begin::Image input-->
-																		<div class="image-input image-input-outline" data-kt-image-input="true" style="background-image: url(assets/media/avatars/blank.png)">
+																		<div class="image-input image-input-outline" data-kt-image-input="true" style="background-image: url(/images/avatars/blank.png)">
 																			<!--begin::Preview existing avatar-->
-																			<div class="image-input-wrapper w-125px h-125px" style="background-image: url(assets/media/avatars/150-1.jpg);"></div>
+																			<div class="image-input-wrapper w-125px h-125px" style="background-image: url(/images/avatars/150-1.jpg);"></div>
 																			<!--end::Preview existing avatar-->
 																			<!--begin::Label-->
 																			<label class="btn btn-icon btn-circle btn-active-color-primary w-25px h-25px bg-body shadow" data-kt-image-input-action="change" data-bs-toggle="tooltip" title="" data-bs-original-title="Change avatar">
@@ -3543,12 +3543,12 @@
 															<div class="symbol-group symbol-hover">
 																<!--begin::User-->
 																<div class="symbol symbol-20px symbol-circle" data-bs-toggle="tooltip" title="" data-bs-original-title="Emma Smith">
-																	<img alt="Pic" src="assets/media/avatars/150-1.jpg">
+																	<img alt="Pic" src="/images/avatars/150-1.jpg">
 																</div>
 																<!--begin::User-->
 																<!--begin::User-->
 																<div class="symbol symbol-20px symbol-circle" data-bs-toggle="tooltip" title="" data-bs-original-title="Rudy Stone">
-																	<img alt="Pic" src="assets/media/avatars/150-2.jpg">
+																	<img alt="Pic" src="/images/avatars/150-2.jpg">
 																</div>
 																<!--begin::User-->
 																<!--begin::User-->
@@ -3558,7 +3558,7 @@
 																<!--begin::User-->
 																<!--begin::User-->
 																<div class="symbol symbol-20px symbol-circle" data-bs-toggle="tooltip" title="" data-bs-original-title="Rudy Stone">
-																	<img alt="Pic" src="assets/media/avatars/150-2.jpg">
+																	<img alt="Pic" src="/images/avatars/150-2.jpg">
 																</div>
 																<!--begin::User-->
 																<!--begin::User-->
