--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -142,7 +142,7 @@
 										</div> %>
 										<div class="menu-item">
 											<a class="menu-link py-3" href="/admin/class/class-bidding" title="Check out the complete documentation" data-bs-toggle="tooltip" data-bs-trigger="hover" data-bs-dismiss="click" data-bs-placement="right">
-												<span class="menu-title">Bidding
+												<span class="menu-title">Class
 													<span class="fs-lg-9 badge badge-danger px-2 py-1 ms-2">New</span>
 												</span>
 											</a>
