선택지에 다른 월 더 추가

--- a/app/views/class/class_bidding.html.erb
+++ b/app/views/class/class_bidding.html.erb
@@ -487,12 +487,19 @@
 																						<label class="required fs-6 fw-bold mb-2">Start Date  </label>
 																						<select class="form-select " data-control="select2" data-hide-search="true" data-placeholder="기간을 선택해주세요." name="target_assign" tabindex="-1" aria-hidden="false">
 		
-																							<option value="1">기간을 선택해주세요.</option>
+																							<option value="">기간을 선택해주세요</option>
+																							<option value="1">Jan</option>
 																							<option value="2">Frb</option>
 																							<option value="3">Mar</option>
 																							<option value="4">Apr</option>
 																							<option value="5">May</option>
 																							<option value="6">Jun</option>
+																							<option value="7">Jul</option>
+																							<option value="8">Aug</option>
+																							<option value="9">Sep</option>
+																							<option value="10">Oct</option>
+																							<option value="11">Nov</option>
+																							<option value="12">Dec</option>
 			
 																						</select>
 																					</div>
@@ -504,12 +511,19 @@
 		
 																						<select class="form-select " data-control="select2" data-hide-search="true" data-placeholder="기간을 선택해주세요." name="target_assign" tabindex="-1" aria-hidden="false">
 		
-																							<option value="1">기간을 선택해주세요.</option>
+																							<option value="">기간을 선택해주세요</option>
+																							<option value="1">Jan</option>
 																							<option value="2">Frb</option>
 																							<option value="3">Mar</option>
 																							<option value="4">Apr</option>
 																							<option value="5">May</option>
 																							<option value="6">Jun</option>
+																							<option value="7">Jul</option>
+																							<option value="8">Aug</option>
+																							<option value="9">Sep</option>
+																							<option value="10">Oct</option>
+																							<option value="11">Nov</option>
+																							<option value="12">Dec</option>
 			
 																						</select>
 			
@@ -535,7 +549,7 @@
 																							<option value="2">Tues</option>
 																							<option value="3">Wen</option>
 																							<option value="4">Thir</option>
-																							<option value="5">Fir</option>
+																							<option value="5">Fri</option>
 																							<option value="6">Sat</option>
 																							<option value="7">Sun</option>
 	
@@ -3277,6 +3291,7 @@
 														<!--begin::Modal body-->
 														<div class="modal-body scroll-y mx-5 mx-xl-15 my-7">
 															<!--begin::Form-->
+															<%# TODO:: Submit 을 하여 Seed와 Seed-schedules 를 만드는 부분입니다. Controller 에 넣어 만들어 두겠습니다 %>
 															<form id="kt_modal_add_user_form" class="form fv-plugins-bootstrap5 fv-plugins-framework" action="#">
 																<!--begin::Scroll-->
 																<div class="d-flex flex-column scroll-y me-n7 pe-7" id="kt_modal_add_user_scroll" data-kt-scroll="true" data-kt-scroll-activate="{default: false, lg: true}" data-kt-scroll-max-height="auto" data-kt-scroll-dependencies="#kt_modal_add_user_header" data-kt-scroll-wrappers="#kt_modal_add_user_scroll" data-kt-scroll-offset="300px" style="max-height: 644px;">
