--- a/app/views/class/class_bidding.html.erb
+++ b/app/views/class/class_bidding.html.erb
@@ -570,8 +570,8 @@ License: For each use you must have a valid license purchased only from above li
 																	<div class="tab-pane fade show active" id="kt_tab_class" role="tabpanel">
 																		
 																		<!--begin::Form-->
-																		<form id="kt_modal_add_user_form" class="form fv-plugins-bootstrap5 fv-plugins-framework" action="#">
-																		
+																		<%= form_tag "/class/createSeeds", method: :post do%>
+																		<%# <form id="kt_modal_add_user_form" class="form fv-plugins-bootstrap5 fv-plugins-framework" action="/class/createSeeds" method="post"> %>
 																			<!--begin::Scroll-->
 																			<div class="d-flex flex-column scroll-y me-n7 pe-7" id="kt_modal_add_user_scroll" 
 																			data-kt-scroll="true" data-kt-scroll-activate="{default: false, lg: true}" 
@@ -592,7 +592,7 @@ License: For each use you must have a valid license purchased only from above li
 																			
 																				<div class="fv-row mb-7 fv-plugins-icon-container">
 																					<label class="required fw-bold fs-6 mb-2">Title</label>
-																					<input type="text" name="user_name" class="form-control form-control-solid mb-3 
+																					<input type="text" name="name" class="form-control form-control-solid mb-3 
 																					mb-lg-0" placeholder="Full name" value="Global 5학년 A1 - BH2 북클럽">
 																				<div class="fv-plugins-message-container invalid-feedback"></div>
 																				</div>
@@ -606,11 +606,10 @@ License: For each use you must have a valid license purchased only from above li
 																					
 																							<label class="required fs-6 fw-bold mb-2">Class Type</label>
 																							
-																							<select class="form-select " data-control="select2" data-hide-search="true" data-placeholder="Bookclub" name="target_assign" tabindex="-1" aria-hidden="false">
-				
-																								<option value="">Bookclub</option>
-																								<option value="1">Bookclub</option>
-																								<option value="2">Writing</option>
+																							<select class="form-select " data-control="select2" data-hide-search="true" data-placeholder="Bookclub" name="class_type" tabindex="-1" aria-hidden="false">
+																								<% @class_types.each do |dt|  %>
+																									<option value="<%= dt.id %>"><%= dt.name %></option>
+																								<% end %>
 				
 																							</select>
 																						</div>
@@ -622,15 +621,10 @@ License: For each use you must have a valid license purchased only from above li
 																				
 																							<label class="required fs-6 fw-bold mb-2">Level </label>
 																							
-																							<select class="form-select " data-control="select2" data-hide-search="true" data-placeholder="BL1" name="target_assign" tabindex="-1" aria-hidden="false">
-				
-																								<option value="">BL1</option>
-																								<option value="1">BL1</option>
-																								<option value="2">BL2</option>
-																								<option value="3">BL3</option>
-																								<option value="4">BM1</option>
-																								<option value="5">BM2</option>
-				
+																							<select class="form-select " data-control="select2" data-hide-search="true" data-placeholder="BL1" name="level" tabindex="-1" aria-hidden="false">
+																								<% @levels.each do |dt|  %>
+																									<option value="<%= dt.id %>"><%= dt.name %></option>
+																								<% end %>
 																							</select>
 																						</div>
 																					</div>
@@ -640,12 +634,12 @@ License: For each use you must have a valid license purchased only from above li
 																				
 																							<label class="required fs-6 fw-bold mb-2">Grade </label>
 																							
-																							<select class="form-select " data-control="select2" data-hide-search="true" data-placeholder="1" name="target_assign" tabindex="-1" aria-hidden="false">
+																							<select class="form-select " data-control="select2" data-hide-search="true" data-placeholder="1" name="grade" tabindex="-1" aria-hidden="false">
 				
-																								<option value="">1</option>
-																								<option value="1">2</option>
-																								<option value="2">3,4</option>
-																								<option value="3">5,6,7</option>
+																								<option value="1">1</option>
+																								<option value="2">2</option>
+																								<option value="3">3,4</option>
+																								<option value="4">5,6,7</option>
 				
 																							</select>
 																						</div>
@@ -664,6 +658,8 @@ License: For each use you must have a valid license purchased only from above li
 																									<div class="mb-0">
 																										<label class="required fs-6 fw-bold mb-2"> Period  </label>
 																										<input class="form-control " placeholder="Pick date rage" id="kt_daterangepicker_1"/>
+																										<input id="start_date" name="start_date" style="display:none"/>
+																										<input id="end_date" name="end_date" style="display:none"/>
 																									</div>
 																								</div>
 				
@@ -688,7 +684,7 @@ License: For each use you must have a valid license purchased only from above li
 																								<div class="col-3">
 																									<label class="required fs-6 fw-bold mb-2">Day  </label>
 				
-																									<select class="form-select " data-control="select2" data-hide-search="true" data-placeholder="Mon" name="target_assign" tabindex="-1" aria-hidden="false">
+																									<select class="form-select " data-control="select2" data-hide-search="true" data-placeholder="Mon" name="day" tabindex="-1" aria-hidden="false">
 					
 				
 																										<option value="1">Mon</option>
@@ -705,13 +701,20 @@ License: For each use you must have a valid license purchased only from above li
 																								<div class="col-2">
 																									<label class="required fs-6 fw-bold mb-2">Start Time  </label>
 					
-																									<select class="form-select " data-control="select2" data-hide-search="true" data-placeholder="Hour " name="target_assign" tabindex="-1" aria-hidden="false">
+																									<select class="form-select " data-control="select2" data-hide-search="true" data-placeholder="Hour " name="hour" tabindex="-1" aria-hidden="false">
 					
-																										<option value="1">Hour</option>
+																										<option value="1">1</option>
 																										<option value="2">2</option>
 																										<option value="3">3</option>
 																										<option value="4">4</option>
-																										<option value="5">...</option>
+																										<option value="5">5</option>
+																										<option value="6">6</option>
+																										<option value="7">7</option>
+																										<option value="8">8</option>
+																										<option value="9">9</option>
+																										<option value="10">10</option>
+																										<option value="11">11</option>
+																										<option value="12">12</option>
 						
 																									</select>
 						
@@ -720,13 +723,14 @@ License: For each use you must have a valid license purchased only from above li
 																								<div class="col-2">
 																									<label class=" fs-6 fw-bold mb-2"> &nbsp; </label>
 					
-																									<select class="form-select " data-control="select2" data-hide-search="true" data-placeholder="Min " name="target_assign" tabindex="-1" aria-hidden="false">
+																									<select class="form-select " data-control="select2" data-hide-search="true" data-placeholder="Min " name="minute" tabindex="-1" aria-hidden="false">
 					
-																										<option value="1">Min</option>
-																										<option value="2">2</option>
-																										<option value="3">3</option>
-																										<option value="4">4</option>
-																										<option value="5">...</option>
+																										<option value="0">00</option>
+																										<option value="1">10</option>
+																										<option value="2">20</option>
+																										<option value="3">30</option>
+																										<option value="4">40</option>
+																										<option value="5">50</option>
 						
 																									</select>
 						
@@ -735,7 +739,7 @@ License: For each use you must have a valid license purchased only from above li
 																								<div class="col-2">
 																									<label class=" fs-6 fw-bold mb-2"> &nbsp; </label>
 					
-																									<select class="form-select " data-control="select2" data-hide-search="true" data-placeholder="AM " name="target_assign" tabindex="-1" aria-hidden="false">
+																									<select class="form-select " data-control="select2" data-hide-search="true" data-placeholder="AM " name="am_pm" tabindex="-1" aria-hidden="false">
 					
 																										<option value="1">AM</option>
 																										<option value="2">PM</option>
@@ -750,22 +754,19 @@ License: For each use you must have a valid license purchased only from above li
 
 
 																								<div class="col-3">
-																									<label class="required fs-6 fw-bold mb-2">Leaning time  </label>
+																									<label class="required fs-6 fw-bold mb-2">Learning time  </label>
 				
-																									<select class="form-select " data-control="select2" data-hide-search="true" data-placeholder="AM " name="target_assign" tabindex="-1" aria-hidden="false">
+																									<select class="form-select " data-control="select2" data-hide-search="true" data-placeholder="AM " name="session" tabindex="-1" aria-hidden="false">
 					
-																										<option value="1">20 min</option>
-																										<option value="2">30 min</option>
-																										<option value="2">40 min</option>
-																										<option value="2">50 min</option>
-																									
+																										<option value="1">10 min</option>
+																										<option value="2">20 min</option>
+																										<option value="3">30 min</option>
+																										<option value="4">40 min</option>
+																										<option value="5">50 min</option>
 						
 																									</select>
 				
 																								</div>
-				
-				
-				
 				
 																							</div>
 																						
@@ -774,25 +775,10 @@ License: For each use you must have a valid license purchased only from above li
 																				</div>
 		
 		
-		
-		
-		
-		
-		
-		
 																				<div class="fv-row mb-7 fv-plugins-icon-container">
 																					<a class="btn fw-bold fs-6 ps-0 text-primary ">+ Add Day & Time </a>
 																				</div>
 		
-		
-		
-																				
-																				
-																			
-		
-		
-		
-
 																			</div>
 																			<!--end::Scroll-->
 		
@@ -806,8 +792,8 @@ License: For each use you must have a valid license purchased only from above li
 																				</button>
 																			</div>
 																			<!--end::Actions-->
-																		<div></div>
-																		</form>
+																		<%# </form> %>
+																		<% end %>
 																		<!--end::Form-->
 																	</div>
 																
@@ -852,13 +838,20 @@ License: For each use you must have a valid license purchased only from above li
 																						<div class="col-2">
 																							<label class="required fs-6 fw-bold mb-2">Start Time  </label>
 			
-																							<select class="form-select " data-control="select2" data-hide-search="true" data-placeholder="Hour " name="target_assign" tabindex="-1" aria-hidden="false">
+																							<select class="form-select " data-control="select2" data-hide-search="true" data-placeholder="Hour " name="hour" tabindex="-1" aria-hidden="false">
 			
-																								<option value="1">Hour</option>
+																								<option value="1">1</option>
 																								<option value="2">2</option>
 																								<option value="3">3</option>
 																								<option value="4">4</option>
-																								<option value="5">...</option>
+																								<option value="5">5</option>
+																								<option value="6">6</option>
+																								<option value="7">7</option>
+																								<option value="8">8</option>
+																								<option value="9">9</option>
+																								<option value="10">10</option>
+																								<option value="11">11</option>
+																								<option value="12">12</option>
 				
 																							</select>
 				
@@ -867,13 +860,14 @@ License: For each use you must have a valid license purchased only from above li
 																						<div class="col-2">
 																							<label class=" fs-6 fw-bold mb-2"> &nbsp; </label>
 			
-																							<select class="form-select " data-control="select2" data-hide-search="true" data-placeholder="Min " name="target_assign" tabindex="-1" aria-hidden="false">
+																							<select class="form-select " data-control="select2" data-hide-search="true" data-placeholder="Min " name="minute" tabindex="-1" aria-hidden="false">
 			
-																								<option value="1">Min</option>
-																								<option value="2">2</option>
-																								<option value="3">3</option>
-																								<option value="4">4</option>
-																								<option value="5">...</option>
+																								<option value="0">00</option>
+																								<option value="1">10</option>
+																								<option value="2">20</option>
+																								<option value="3">30</option>
+																								<option value="4">40</option>
+																								<option value="5">50</option>
 				
 																							</select>
 				
@@ -882,7 +876,7 @@ License: For each use you must have a valid license purchased only from above li
 																						<div class="col-2">
 																							<label class=" fs-6 fw-bold mb-2"> &nbsp; </label>
 			
-																							<select class="form-select " data-control="select2" data-hide-search="true" data-placeholder="AM " name="target_assign" tabindex="-1" aria-hidden="false">
+																							<select class="form-select " data-control="select2" data-hide-search="true" data-placeholder="AM " name="am_pm" tabindex="-1" aria-hidden="false">
 			
 																								<option value="1">AM</option>
 																								<option value="2">PM</option>
@@ -2184,6 +2178,7 @@ License: For each use you must have a valid license purchased only from above li
 																					</td>
 																				</tr>
 																				<tr>
+																				<br>
 																					<td  class=" " >Class Type</td>
 																					<td>
 																						<span class="fw-bold ">
@@ -4752,7 +4747,7 @@ License: For each use you must have a valid license purchased only from above li
 															</div>
 														</th>
 														
-														<th class="min-w-125px sorting" tabindex="0" aria-controls="kt_table_users" rowspan="1" colspan="1" aria-label="User: activate to sort column ascending" ">Class</th>
+														<th class="min-w-125px sorting" tabindex="0" aria-controls="kt_table_users" rowspan="1" colspan="1" aria-label="User: activate to sort column ascending">Class</th>
 														<th class="min-w-125px sorting" tabindex="0" aria-controls="kt_table_users" rowspan="1" colspan="1" aria-label="Role: activate to sort column ascending">Period</th>
 
 														<th class="min-w-125px sorting" tabindex="0" aria-controls="kt_table_users" rowspan="1" colspan="1" aria-label="Role: activate to sort column ascending" >Teacher</th>
@@ -4906,50 +4901,59 @@ License: For each use you must have a valid license purchased only from above li
 			<!--end::Page-->
 		</div>
 		<!--end::Root-->
-
 		<script>
-			$("#kt_daterangepicker_1").daterangepicker();
+			$( document ).ready(function() { 
+				$("#kt_daterangepicker_1").daterangepicker({
 
-			$("#kt_daterangepicker_2").daterangepicker({
-				timePicker: false,
-				startDate: moment().startOf("hour"),
-				endDate: moment().startOf("hour").add(32, "hour"),
-				locale: {
-					format: "M/DD hh:mm A"
+				}, function(start, end, label) {
+					console.log('New date range selected: ' + start.format('YYYY-MM-DD') + ' to ' + end.format('YYYY-MM-DD') + ' (predefined range: ' + label + ')')
+					console.log("시작일 : " + start.format('YYYY-MM-DD'))
+					console.log("종료일 : " + end.format('YYYY-MM-DD'))
+					document.getElementById('start_date').value=start.format('YYYY-MM-DD'); 
+					document.getElementById('end_date').value=end.format('YYYY-MM-DD'); 
+				});
+
+				$("#kt_daterangepicker_2").daterangepicker({
+					timePicker: false,
+					startDate: moment().startOf("hour"),
+					endDate: moment().startOf("hour").add(32, "hour"),
+					locale: {
+						format: "M/DD hh:mm A"
+					}
+				});
+
+				$("#kt_daterangepicker_3").daterangepicker({
+					singleDatePicker: true,
+					showDropdowns: true,
+					minYear: 1901,
+					maxYear: parseInt(moment().format("YYYY"),10)
+				}, function(start, end, label) {
+					var years = moment().diff(start, "years");
+					alert("You are " + years + " years old!");
 				}
+			);
+
+			// Stepper lement
+			var element = document.querySelector("#kt_stepper_example_clickable");
+
+			// Initialize Stepper
+			var stepper = new KTStepper(element);
+
+			// Handle navigation click
+			stepper.on("kt.stepper.click", function (stepper) {
+				stepper.goTo(stepper.getClickedStepIndex()); // go to clicked step
 			});
 
-			$("#kt_daterangepicker_3").daterangepicker({
-				singleDatePicker: true,
-				showDropdowns: true,
-				minYear: 1901,
-				maxYear: parseInt(moment().format("YYYY"),10)
-			}, function(start, end, label) {
-				var years = moment().diff(start, "years");
-				alert("You are " + years + " years old!");
-			}
-		);
+			// Handle next step
+			stepper.on("kt.stepper.next", function (stepper) {
+				stepper.goNext(); // go next step
+			});
 
-		// Stepper lement
-		var element = document.querySelector("#kt_stepper_example_clickable");
-
-		// Initialize Stepper
-		var stepper = new KTStepper(element);
-
-		// Handle navigation click
-		stepper.on("kt.stepper.click", function (stepper) {
-			stepper.goTo(stepper.getClickedStepIndex()); // go to clicked step
-		});
-
-		// Handle next step
-		stepper.on("kt.stepper.next", function (stepper) {
-			stepper.goNext(); // go next step
-		});
-
-		// Handle previous step
-		stepper.on("kt.stepper.previous", function (stepper) {
-			stepper.goPrevious(); // go previous step
-		});
+			// Handle previous step
+			stepper.on("kt.stepper.previous", function (stepper) {
+				stepper.goPrevious(); // go previous step
+			});
+		})
 		</script>
 		<!--end::Javascript-->
 	</body>
